# grounded-rag

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: Dockerfile  config.py  db.py  embeddings.py  ingest.py  llm.py  main.py  pyproject.toml  retrieve.py  router.py  tools.py
api/corpora/: __init__.py  base.py  bulbapedia.py  bulbapedia_crawl.py  crystal_battle.py  markdown_dir.py  monotype_data.py  ou_data.py  pokeapi.py  smogon.py  smogon_fetch.py
docs/: architecture.md
eval/: band_report.py  gen_paraphrases.py  paraphrases.yaml  questions.example.yaml  questions.yaml  run_eval.py
integrations/airi/: pokemon_expert_mcp.py
k8s/: README.md  api.yaml  config.yaml  ingest-job.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  web.yaml
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  api.ts
